--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 </head>
 <body>
   <header>
+    <div class="nav-bar">
+      <div class="row">
+        <div class="column-third">
+          <h2>Ajax Project</h2>
+        </div>
+
+      </div>
+
+    </div>
   </header>
   <main>
   </main>
