Create form for search entries

--- a/index.html
+++ b/index.html
@@ -16,12 +16,27 @@
         <div class="column-third">
           <h2>Ajax Project</h2>
         </div>
-
       </div>
-
     </div>
   </header>
   <main>
+    <div class="container back-ground">
+      <div data-view="home">
+        <form id="home">
+          <div class="row">
+            <div class="column-full column-half">
+              <label for="search">Search a character</label>
+              <input
+              class="search-bar"
+              required
+              name="search"
+              type="text"
+              id="search">
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
