Add button to initiate the search

--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <form id="home">
           <div class="row">
             <div class="column-full column-half">
-              <label for="search">Search a character</label>
+              <div class="search-bar">
+              <label for="search">Search a character</label> <br>
               <input
               class="search-bar"
               required
               name="search"
               type="text"
-              id="search">
+              id="search"> <br>
+              <button class="search">Search</button>
+              </div>
+
             </div>
           </div>
         </form>
