Add any other images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
@@ -28,14 +32,16 @@
               <div class="search-bar">
               <label for="search">Search a character</label> <br>
               <input
-              class="search-bar"
+              class="search-box"
               required
               name="search"
               type="text"
               id="search"> <br>
-              <button class="search">Search</button>
+              <button class="search-button">Search</button>
               </div>
-
+              <div class="portal">
+                <img src="images/po.png" class="portal-image">
+              </div>
             </div>
           </div>
         </form>
