--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
       <div data-view="home">
         <form id="home">
           <div class="row">
-            <div class="column-full column-half">
+            <div class="column-full">
               <div class="search-bar">
-              <label for="search">Search a character</label> <br>
+              <label for="search">Search a character</label>
               <input
               class="search-box"
               required
               name="search"
               type="text"
-              id="search"> <br>
+              id="search">
               <button class="search-button">Search</button>
               </div>
               <div class="portal">
