--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <form id="home">
           <div class="row">
             <div class="column-full">
+              <div class="column-half">
               <div class="search-bar">
-              <label for="search">Search a character</label>
+              <label for="search" class="character-search">Search a character</label>
               <input
               class="search-box"
               required
@@ -38,6 +39,7 @@
               type="text"
               id="search">
               <button class="search-button">Search</button>
+              </div>
               </div>
               <div class="portal">
                 <img src="images/po.png" class="portal-image">
