Add new button for generating random character

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               type="text"
               id="search">
               <button class="search-button">Search</button>
+              <button class="random-button">Generate Random</button>
               </div>
               </div>
               <div class="portal">
