Add functionality so that it will log the random ID number with the characters information

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <label for="search" class="character-search">Search a character</label>
                 <input
                 class="search-box"
-                required
+
                 name="search"
                 type="text"
                 id="search">
 
               <div class="column-half">
               <button class="search-button">Search</button>
-              <button class="random-button">Generate Random</button>
+              <button class="random-button" type="button">Generate Random</button>
               </div>
               </div>
               <div class="portal">
