Style button to appeal to both mobile and desktop

--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
                 name="search"
                 type="text"
                 id="search">
-
+              <div class="row">
               <div class="column-half">
               <button class="search-button">Search</button>
+              </div>
+              <div class="column-half">
               <button class="random-button" type="button">Generate Random</button>
               </div>
               </div>
+            </div>
               <div class="portal">
                 <img src="images/po.png" class="portal-image">
               </div>
