--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           </div>
         </form>
       </div>
+      <div data-view="results">
+
+      </div>
     </div>
   </main>
   <script src="js/data.js"></script>
