--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p class="char-info-text">S - 01 E - 02</p>
             <p class="char-info-text">S - 01 E - 03</p>
             <p class="char-info-text">S - 01 E - 04</p>
-            <p class="char-info-text">...</p>
+            <p class="char-info-text">..</p>
           </div>
         </div>
       </div>
