Create function for each search that returns a dom tree that appends to the page when the DomContentLoaded event fires

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
         </form>
       </div>
       <div data-view="results">
-        <div class="row margin-top width-80 border">
-          <div class="col-50">
-            <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" class="avatar-img border">
+        <div class="row margin-top background-gray width-80 border">
+          <div class="col-25">
+            <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" class="result-img ">
           </div>
-          <div class="col-50">
-            <h1 class="char-info-text">Rick Sanchez</h1>
-            <h2 class="char-info-text">Location: <span>C-137</span></h2>
-            <h2 class="char-info-text">Status: <span>Alive</span></h2>
-            <h2 class="char-info-text">Episodes: </h2>
-            <p class="char-info-text">S - 01 E - 01</p>
-            <p class="char-info-text">S - 01 E - 02</p>
-            <p class="char-info-text">S - 01 E - 03</p>
-            <p class="char-info-text">S - 01 E - 04</p>
-            <p class="char-info-text">...</p>
+          <div class="col-75">
+            <h2 class="char-info-text">Rick Sanchez</h2>
+          </div>
+        </div>
+        <div class="row margin-top-half background-gray width-80 border">
+          <div class="col-25">
+            <img src="https://rickandmortyapi.com/api/character/avatar/2.jpeg" class="result-img">
+          </div>
+          <div class="col-75">
+            <h2 class="char-info-text">Morty Smith</h2>
           </div>
         </div>
       </div>
