--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJAX Project</title>
+  <title>Ajax Project</title>
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
@@ -18,7 +18,7 @@
     <div class="nav-bar">
       <div class="row">
         <div class="column-third">
-          <h2>Ajax Project</h2>
+          <h2>Ryan Zuckerberg</h2>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
           </div>
         </form>
       </div>
-      <div data-view="results">
+      <!-- <div data-view="results">
         <div class="row margin-top background-gray width-80 border">
           <div class="col-25">
             <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" class="result-img ">
@@ -70,7 +70,7 @@
             <h2 class="char-info-text">Morty Smith</h2>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </main>
   <script src="js/data.js"></script>
