--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <div class="nav-bar">
       <div class="row">
         <div class="column-third">
-          <h2>Ryan Zuckerberg</h2>
+          <h2>Meseeks</h2>
+        </div>
+        <div class="column-third">
+          <h2>Favorites</h2>
+        </div>
+        <div class="column-third">
+          <h2>Home</h2>
         </div>
       </div>
     </div>
