--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 </head>
 <body>
+  <div class="body-container" id="body-container">
+  <div class="back-ground">
   <header>
     <div class="nav-bar">
       <div class="row">
@@ -24,14 +26,15 @@
           <h2>Favorites</h2>
         </div>
         <div class="column-third">
-          <h2>Home</h2>
+          <h2 class="home-page">Home</h2>
         </div>
       </div>
     </div>
   </header>
   <main>
-    <div class="container back-ground">
-      <div data-view="home">
+    <div>
+     <div class="container">
+      <div data-view="home" class="home view">
         <form id="home">
           <div class="row">
             <div class="column-full">
@@ -58,9 +61,10 @@
             </div>
           </div>
         </form>
+        </div>
       </div>
-      <!-- <div data-view="results">
-        <div class="row margin-top background-gray width-80 border">
+      <div data-view="results" class="view">
+        <!-- <div class="row margin-top background-gray width-80 border">
           <div class="col-25">
             <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" class="result-img ">
           </div>
@@ -75,11 +79,14 @@
           <div class="col-75">
             <h2 class="char-info-text">Morty Smith</h2>
           </div>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
     </div>
   </main>
+  </div>
+  </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
