--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <div>
      <div class="container">
-      <div data-view="home" class="home view">
+      <div data-view="home" class="home">
         <form id="home">
           <div class="row">
             <div class="column-full">
@@ -64,7 +64,10 @@
         </div>
       </div>
       <div data-view="results" class="view">
-        <div class="row margin-top background-gray width-80 border">
+
+      </div>
+      <div data-view="card">
+         <!-- <div class="row margin-top background-gray width-80 border" id="card">
           <div class="col-50">
             <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" class="result-img-card ">
           </div>
@@ -79,9 +82,8 @@
             <p class="char-info-text">S - 01 E - 04</p>
             <p class="char-info-text">..</p>
           </div>
+        </div> -->
         </div>
-
-      </div>
     </div>
   </main>
   </div>
