--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <div>
      <div class="container">
-      <div data-view="home" class="home">
+      <div data-view="home" class="home view">
         <form id="home">
           <div class="row">
             <div class="column-full">
@@ -66,7 +66,7 @@
       <div data-view="results" class="view">
 
       </div>
-      <div data-view="card">
+      <div data-view="card" class="view">
          <!-- <div class="row margin-top background-gray width-80 border" id="card">
           <div class="col-50">
             <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" class="result-img-card ">
